--- a/config_sample.env
+++ b/config_sample.env
@@ -1,14 +1,14 @@
 # Remove this line before deploying
 _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
+BOT_TOKEN = "5775811874:AAFsW9LDRziEnYaR_Vt7L-BDQL5aOeURoLQ"
 GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+OWNER_ID = 5936165586
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+TELEGRAM_API = 29113859
+TELEGRAM_HASH = "4fa6a1c5696971b5063c05a590f3823f"
 # OPTIONAL CONFIG
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1
 IS_TEAM_DRIVE = ""
